@@ -46,6 +46,10 @@ A Space Adventure:
 Controls:
  + Add control to unselect current weapon (no key chosen by default)
  + Allow to leave a control unused
+ + Reset zoom resets zoom to zoom level set in options
+ + Precise + Reset zoom resets zoom to 100% (instead of zoom in options)
+ + Precise + zoom in/out changes zoom in smaller steps
+ + Precise + volume up/down changes volume in smaller steps
  + New chat command: “/help room” (shows room chat commands within the game)
 
 Graphics:
